Revise constants and skeleton function names

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -19,7 +19,7 @@
                 <span>Enable Popup Dark Mode</span>
             </div>
             <div>
-                <input type="checkbox" id="popup-darkmode-switch" name="switch" role="switch">
+                <input type="checkbox" id="popup-theme-switch" name="switch" role="switch">
             </div>
         </div>
         <div class="switch-grid grid">
@@ -27,7 +27,7 @@
                 <span>Enable LeetCode Dark Mode</span>
             </div>
             <div>
-                <input type="checkbox" id="leetcode-darkmode-switch" name="switch" role="switch">
+                <input type="checkbox" id="leetcode-theme-switch" name="switch" role="switch">
             </div>
         </div>
         <div class="switch-grid grid">
@@ -35,7 +35,7 @@
                 <span>Enable LeetCode Editor Theme</span>
             </div>
             <div>
-                <input type="checkbox" id="leetcode-theme-switch" name="switch" role="switch">
+                <input type="checkbox" id="monaco-theme-switch" name="switch" role="switch">
             </div>
         </div>
         <div class="switch-grid grid">
@@ -43,7 +43,7 @@
                 <span>Enable Auto Reset Code</span>
             </div>
             <div>
-                <input type="checkbox" id="leetcode-code-reset-switch" name="switch" role="switch">
+                <input type="checkbox" id="leetcode-reset-switch" name="switch" role="switch">
             </div>
         </div>
     </div>
