minor changes lol

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -115,7 +115,11 @@
 </main>
 </body>
 
-<script src="../content_scripts/constants.js"></script>
+<script src="../util/constants.js"></script>
+<script src="../util/utils.js"></script>
+<script src="../util/storage.js"></script>
+<script src="scripts/selectors.js"></script>
+<script src="scripts/messages.js"></script>
 <script src="popup.js"></script>
 
 </html>
