--- a/theme-converter/theme-converter.html
+++ b/theme-converter/theme-converter.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -7,81 +7,79 @@
 
     <title>Theme Converter</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.2/darkly/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/panda-syntax-dark.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/picocss/1.5.11/pico.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/nord.min.css">
     <link rel="stylesheet" href="theme-converter.css">
 </head>
 
-<body class="bg-dark text-light">
-    <div class="container d-flex justify-content-center mt-4">
-        <div id="main-card" class="card border-secondary p-4 text-center">
-            <h1 class="display-3 mb-2">Theme Converter</h1>
-            <p class="text-warning lead">Convert VS Code Theme JSON -> Monaco Theme JSON</p>
-
-            <input id="theme-file-input" type="file" accept=".json" class="form-control-lg mb-3">
-            <button id="convert-theme" class="btn btn-lg btn-info btn-block mb-3">Convert Theme</button>
-
-            <div id="loading-spinner" class="d-none mb-3 d-flex align-items-center justify-content-center">
-                <div id="loader" class="d-none"></div>
-            </div>
-
-            <a id="download" class="d-none btn btn-lg btn-success btn-block mb-3">Download Converted Theme</a>
-
-            <div id="error-alert" class="d-none alert alert-dismissible alert-danger">
-                <strong>Error!</strong> Input must be VS Code Theme JSON
-                <button id="close-error-alert" class="btn-close" type="button" aria-label="Close"></button>
-            </div>
+<body>
+    <main class="container">
+        <div id="theme-switch-container">
+            <input id="theme-switch" type="checkbox" class="themeswitch__input">
+            <label class="themeswitch__label" for="theme-switch">
+                <span class="themeswitch__indicator"></span>
+                <span class="themeswitch__decoration"></span>
+            </label>
         </div>
-    </div>
 
-    <div class="container mt-3">
-        <p id="copy-themelist-info" class="d-none text-warning fst-italic mb-0">
-            Paste in themes/themelist.json
-        </p>
-        <div class="position-relative">
-            <button
-                class="d-none btn btn-info position-absolute top-0 end-0 mt-1 me-1"
-                id="copy-themelist-code"
-                data-clipboard-target="#code-themelist">
-                Copy JSON
+        <article id="main-card">
+            <div id="main-title-container">
+                <h1 id="main-title" class="glitch" data-text="Theme Converter">Theme Converter</h1>
+            </div>
+
+            <p id="description">Convert VS Code Theme JSON -> Monaco Theme JSON</p>
+            <input id="theme-file-input" type="file" accept=".json">
+            <button id="convert-theme">Convert Theme</button>
+            <a id="download" class="hidden" role="button">Download Converted Theme</a>
+
+            <button id="error-alert" class="hidden" type="button">
+                <strong>Error!</strong> Input must be VS Code Theme JSON
             </button>
+        </article>
+
+        <div class="container">
+            <div class="copy-container">
+                <span id="copy-themelist-info" class="hidden">
+                    Paste in themes/themelist.json
+                </span>
+                <button class="hidden copy" id="copy-themelist-code" data-clipboard-target="#code-themelist">
+                    Copy JSON
+                </button>
+            </div>
             <pre id="code-themelist"></pre>
         </div>
-    </div>
 
-    <div class="container mt-3">
-        <p id="copy-popup-info" class="d-none text-warning fst-italic mb-0">
-            Paste in popup/popup.html
-        </p>
-        <div class="position-relative">
-            <button
-                class="d-none btn btn-info position-absolute top-0 end-0 mt-1 me-1"
-                id="copy-popup-code"
-                data-clipboard-target="#code-popup">
-                Copy HTML
-            </button>
+        <div class="container">
+            <div class="copy-container">
+                <span id="copy-popup-info" class="hidden">
+                    Paste in popup/popup.html
+                </span>
+                <button class="hidden copy" id="copy-popup-code" data-clipboard-target="#code-popup">
+                    Copy HTML
+                </button>
+            </div>
             <pre id="code-popup"></pre>
         </div>
-    </div>
 
-    <div class="container mt-3">
-        <p id="copy-json-info" class="d-none text-warning fst-italic mb-0">
-            Paste in themes/
-        </p>
-        <div class="position-relative">
-            <button
-                class="d-none btn btn-info position-absolute top-0 end-0 mt-1 me-1"
-                id="copy-json-code"
-                data-clipboard-target="#code-json">
-                Copy JSON
-            </button>
+        <div class="container">
+            <div class="copy-container">
+                <span id="copy-json-info" class="hidden">
+                    Paste in themes/
+                </span>
+                <button class="hidden copy" id="copy-json-code" data-clipboard-target="#code-json">
+                    Copy JSON
+                </button>
+            </div>
             <pre id="code-json"></pre>
         </div>
-    </div>
+    </main>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    <script src="scripts/selectors.js"></script>
+    <script src="scripts/utils.js"></script>
+    <script src="scripts/code.js"></script>
+    <script src="scripts/parser.js"></script>
     <script src="theme-converter.js"></script>
 </body>
 
