Fix names in popup, Temporarily add _TMP to filenames needed to change because VSCode doesn't care if about case changes

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -55,7 +55,7 @@
     <div id="theme-selector-wrapper">
         <select id="theme-selector">
             <option selected disabled>Choose theme...</option>
-            <option value="active4d">Active4d</option>
+            <option value="active4d">Active4D</option>
             <option value="all-hallows-eve">All Hallows Eve</option>
             <option value="amy">Amy</option>
             <option value="birds-of-paradise">Birds of Paradise</option>
@@ -72,17 +72,17 @@
             <option value="dreamweaver">Dreamweaver</option>
             <option value="eiffel">Eiffel</option>
             <option value="espresso-libre">Espresso Libre</option>
-            <option value="github-dark">Github Dark</option>
-            <option value="github-light">Github Light</option>
-            <option value="github">Github</option>
+            <option value="github-dark">GitHub Dark</option>
+            <option value="github-light">GitHub Light</option>
+            <option value="github">GitHub</option>
             <option value="idle">Idle</option>
-            <option value="idlefingers">Idle Fingers</option>
-            <option value="iplastic">I Plastic</option>
+            <option value="idle-fingers">Idle Fingers</option>
+            <option value="iplastic">iPlastic</option>
             <option value="katzenmilch">Katzenmilch</option>
             <option value="kr-theme">Kr Theme</option>
             <option value="kuroir-theme">Kuroir Theme</option>
             <option value="lazy">Lazy</option>
-            <option value="magicwb-amiga">Magicwb Amiga</option>
+            <option value="magicwb-amiga">MagicWb Amiga</option>
             <option value="merbivore-soft">Merbivore Soft</option>
             <option value="merbivore">Merbivore</option>
             <option value="monoindustrial">Monoindustrial</option>
